# mono-player

./: .gitignore  AGENTS.md  README.md  RUST_AUDIO_BACKEND_STEPS.md  count_lines.ps1  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: app-dialogs-refactor-plan.md  app-layout-refactor-plan.md  custom-theme.md  file-splitting-guide.md  frontend-reuse-refactor-plan.md  mcp-development-steps.md  multiprocess-architecture.md  multiprocess-system-steps.md  plugin-rules.md  structured-api-response-plan.md  wasm-plugin-development.md
docs/prototypes/: mono-redesign-prototype.html
plugins/aq-lyrics/: Cargo.toml
plugins/ayun-lyrics/: .gitignore  Cargo.toml  build.ps1
plugins/theme-dark/: Cargo.toml  build.ps1
plugins/theme-forest-mint/: Cargo.toml  build.ps1
plugins/theme-gray-white/: Cargo.toml  build.ps1
plugins/theme-transparent/: Cargo.toml  build.ps1
plugins/xiaogou-music/: Cargo.toml  build.ps1
scripts/: dev-tauri.ps1  worker-e2e.mjs
src/: App.vue  i18n.ts  main.ts  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: api_response.rs  app_error.rs  covers.rs  database.rs  diagnostics.rs  downloads.rs  lib.rs  lyrics.rs  main.rs  mcp.rs  mcp_bridge.rs  models.rs  player.rs  plugins.rs  scanner.rs  shell.rs  state.rs  store.rs  system_media.rs  themes.rs  tray.rs
src-tauri/src/player/: cache.rs  queue.rs
src-tauri/src/workers/: audio.rs  download.rs  lifecycle.rs  manager.rs  mcp_api.rs  mod.rs  plugin.rs  protocol.rs  scanner.rs
(+168 files in other folders)
