[package]
name = "mono-player"
version = "0.1.0"
description = "Local Mono Player built with Tauri, Vue 3, TypeScript, and Rust"
authors = ["you"]
edition = "2021"

[lib]
name = "mono_player_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.4.1", features = [] }
tauri-codegen = "=2.4.0"
tauri-utils = "=2.7.0"

[dependencies]
lofty = "=0.22.2"
rusqlite = { version = "=0.37.0", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
souvlaki = "0.8.3"
tauri = { version = "=2.8.5", default-features = false, features = ["protocol-asset", "wry", "common-controls-v6", "tray-icon"] }
tauri-macros = "=2.4.0"
tauri-runtime = "=2.8.0"
tauri-runtime-wry = "=2.8.1"
tauri-plugin-dialog = "=2.4.0"
tauri-plugin-fs = "=2.4.4"
tauri-utils = "=2.7.0"
walkdir = "2.5.0"
image = { version = "0.25.8", default-features = false, features = ["png", "jpeg", "bmp", "webp"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "gzip", "deflate"] }
rodio = "0.21.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
uuid = { version = "1", features = ["v4"] }
windows-sys = { version = "0.61.2", features = ["Win32_System_Registry", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }
wasmtime = { version = "25", default-features = false, features = ["cranelift", "runtime"] }
